--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,7 @@
     }
    ],
    "source": [
-    "salina = {'City': 'Salina Island'}\n",
+    "salina = {'City': 'Salina Island', 'Country'}\n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
