Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,8 @@
     }
    ],
    "source": [
-    "salina = {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3,}\n",
+    "salina = {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}\n",
+    "\n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
