--- a/index.ipynb
+++ b/index.ipynb
@@ -433,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_values = ['Pyeon']\n",
+    "pyeongchang_values = ['PyeongChang', 'South ']\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
