--- a/index.ipynb
+++ b/index.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -352,13 +352,13 @@
        "288"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "los_cabos_pop = cities[4]['Popula']\n",
+    "los_cabos_pop = cities[4]['Population']\n",
     "los_cabos_pop # 288"
    ]
   },
