--- a/index.ipynb
+++ b/index.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -382,13 +382,13 @@
        "12"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_count = len(citie)\n",
+    "city_count = len(cities)\n",
     "city_count # 12"
    ]
   },
